Parser/errors/pdksh.txt
creating Makefile
creating config.h
creating config.h
+ make siglist.out CPPFLAGS=-P
+ make siglist.out CPPFLAGS=-P
make: Entering directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
make: Entering directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
make: Entering directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
CONFIG_FILES="" CONFIG_HEADERS=config.h ./config.status
CONFIG_FILES="" CONFIG_HEADERS=config.h ./config.status
CONFIG_FILES="" CONFIG_HEADERS=config.h ./config.status
creating config.h
creating config.h
creating config.h
creating config.h
config.h is unchanged
config.h is unchanged
config.h is unchanged
config.h is unchanged
date > stamp-h
date > stamp-h
date > stamp-h
date > stamp-h
./siglist.sh "gcc -E -P -DHAVE_CONFIG_H -I. -I." < ./siglist.in > tmpsiglist.out
./siglist.sh "gcc -E -P -DHAVE_CONFIG_H -I. -I." < ./siglist.in > tmpsiglist.out
./siglist.sh "gcc -E -P -DHAVE_CONFIG_H -I. -I." < ./siglist.in > tmpsiglist.out
./siglist.sh "gcc -E -P -DHAVE_CONFIG_H -I. -I." < ./siglist.in > tmpsiglist.out
In file included from tmpi1232629.c:1:
In file included from tmpi1232629.c:1:
In file included from tmpi1232629.c:1:
In file included from tmpi1232629.c:1:
sh.h:254:5: error: #error cannot find 32 bit type...
sh.h:254:5: error: #error cannot find 32 bit type...
sh.h:254:5: error: #error cannot find 32 bit type...
sh.h:254:5: error: #error cannot find 32 bit type...
  254 |    #error cannot find 32 bit type...
  254 |    #error cannot find 32 bit type...
  254 |    #error cannot find 32 bit type...
  254 |    #error cannot find 32 bit type...
      |     ^~~~~
      |     ^~~~~
      |     ^~~~~
      |     ^~~~~
make: *** [Makefile:136: siglist.out] Error 1
make: *** [Makefile:136: siglist.out] Error 1
make: *** [Makefile:136: siglist.out] Error 1
make: *** [Makefile:136: siglist.out] Error 1
make: *** [Makefile:136: siglist.out] Error 1
make: Leaving directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
make: Leaving directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
make: Leaving directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
make: Leaving directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
make: Leaving directory '/usr/src/RPM/BUILD/pdksh-5.2.14'
error: Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)










RPM build errors:
RPM build errors:
RPM build errors:
RPM build errors:
RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.11088 (%build)
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
2.41user 2.36system 0:04.43elapsed 107%CPU (0avgtext+0avgdata 24284maxresident)k
2.41user 2.36system 0:04.43elapsed 107%CPU (0avgtext+0avgdata 24284maxresident)k
2.41user 2.36system 0:04.43elapsed 107%CPU (0avgtext+0avgdata 24284maxresident)k
2.41user 2.36system 0:04.43elapsed 107%CPU (0avgtext+0avgdata 24284maxresident)k
0inputs+0outputs (0major+392865minor)pagefaults 0swaps
0inputs+0outputs (0major+392865minor)pagefaults 0swaps
0inputs+0outputs (0major+392865minor)pagefaults 0swaps
hsh-rebuild: rebuild of `pdksh-5.2.14-alt5.src.rpm' failed.
hsh-rebuild: rebuild of `pdksh-5.2.14-alt5.src.rpm' failed.
hsh-rebuild: rebuild of `pdksh-5.2.14-alt5.src.rpm' failed.
Command exited with non-zero status 1
Command exited with non-zero status 1
0.96user 2.11system 0:09.68elapsed 31%CPU (0avgtext+0avgdata 12324maxresident)k
0.96user 2.11system 0:09.68elapsed 31%CPU (0avgtext+0avgdata 12324maxresident)k
0inputs+0outputs (0major+84596minor)pagefaults 0swaps
